--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Ace</title>
+  <title>Sanskun |</title>
 
 
 
@@ -119,11 +119,11 @@
                   <div class="carousel-item active">
                     <div class="detail_box">
                       <h1>
-                        CREATIVE <br />
+                        SANSKUN <br />
                         PHOTOGRAPHY
                       </h1>
                       <p>
-                        There are many variations of passages of Lorem Ipsum
+                        Ini adalah momen antara realita dan imajinasi. ~ Maya Flore
                       </p>
                       <div class="btn-box">
                         <a href="" class="btn-1">Contact</a>
@@ -134,11 +134,11 @@
                   <div class="carousel-item ">
                     <div class="detail_box">
                       <h1>
-                        CREATIVE <br />
+                        SANSKUN <br />
                         PHOTOGRAPHY
                       </h1>
                       <p>
-                        There are many variations of passages of Lorem Ipsum
+                        Memotret tidak akan mengubah dunia, namun memotret dapat mengubah cara kita melihat dunia.
                       </p>
                       <div class="btn-box">
                         <a href="" class="btn-1">Contact</a>
@@ -149,11 +149,11 @@
                   <div class="carousel-item ">
                     <div class="detail_box">
                       <h1>
-                        CREATIVE <br />
+                        SANSKUN <br />
                         PHOTOGRAPHY
                       </h1>
                       <p>
-                        There are many variations of passages of Lorem Ipsum
+                        Kita tidak dapat memaksakan semua orang untuk menyukai hasil karya kita.
                       </p>
                       <div class="btn-box">
                         <a href="" class="btn-1">Contact</a>
