--- a/foryou/index.html
+++ b/foryou/index.html
@@ -14,9 +14,10 @@
 
 <body>
 
-  <audio class="song" loop autoplay>
-    <source src="./music/hbd.mpeg">
-    </source>
+  <audio
+    autoplay
+    loop
+    src="https://www.mboxdrive.com/selamat.mp3">
     Your browser isn't invited for super fun audio time.
   </audio>
 
