--- a/foryou/index.html
+++ b/foryou/index.html
@@ -14,10 +14,9 @@
 
 <body>
 
-  <audio
-    autoplay
-    loop
-    src="https://www.mboxdrive.com/selamat.mp3">
+  <audio class="song" loop autoplay>
+    <source src="./music/selamat.mpeg">
+    </source>
     Your browser isn't invited for super fun audio time.
   </audio>
 
