--- a/wedding/index.html
+++ b/wedding/index.html
@@ -12,16 +12,16 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
-    <title>#ReaNdyForMega - Inviter</title>
+    <title>Sansan & Novita - Undangan Webr</title>
         
 </head><body class="container-fluid p-0"  data-bs-spy="scroll" data-bs-target="#scrollspy">
     <div class="popup_screen active">
         <div class="popup_box text-center">
             <div class="background_popup bg-image"></div>
             <p class="popup_subJudul pt-3" id="text-wedding">THE WEDDING OF</p>
-            <h1 class="popup_nama_pengantin_text pt-1 pb-3 ">Randy & Mega</h1>
+            <h1 class="popup_nama_pengantin_text pt-1 pb-3 ">Sansan & Novita</h1>
             <h5 class="invitation_text">- Deliver To -</h5>
-            <h5 class="invitation_text pb-3">-</h5>
+            <h5 class="invitation_text pb-3">Tamu Undangan</h5>
             <button class="btn_open" onclick="open_invitation()">Open Invitation</button>
         </div>
     </div>
@@ -65,9 +65,9 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-1 mb-1 text-center" id="home">
                         <img class="icon_name mb-2" src="Image/iconRM_new.png" alt="" data-aos="fade-in" data-aos-delay="300">
                         <p class="subJudul" id="text-wedding" data-aos="fade-in" data-aos-delay="100">THE WEDDING OF</p>
-                        <h1 class="nama_pengantin_text pt-3 pb-3 " data-aos="fade-in" data-aos-delay="300">Randy & Mega</h1>
-                        <p class=" subJudul mb-1" data-aos="fade-in" data-aos-delay="400"> Sunday, 12 February 2023 </p>
-                        <p class=" subJudul mb-5 pb-5" data-aos="fade-in" data-aos-delay="500"> Jalan Asia Afrika Senayan, Central Jakarta</p>
+                        <h1 class="nama_pengantin_text pt-3 pb-3 " data-aos="fade-in" data-aos-delay="300">Sansan & Novita </h1>
+                        <p class=" subJudul mb-1" data-aos="fade-in" data-aos-delay="400"> Minggu, 7 Juli 2024 </p>
+                        <p class=" subJudul mb-5 pb-5" data-aos="fade-in" data-aos-delay="500"> Jl Lembur sawah, Cihampelas</p>
                     </div>
                 </div>
             </div>
@@ -125,9 +125,10 @@
                                 <span class="groom_info">
                                     <article class="text-center">
                                         <img src="Image/RandyMega/groom_photo.png" alt="" width="150px" data-aos="fade-right" data-aos-delay="100" />
-                                        <h1 class="nama_pengantin_text_info py-3 aos-init" data-aos="fade-in" data-aos-delay="200" >Randy Tjokro</h1>
-                                        <p class="parent_information" data-aos="fade-in" data-aos-delay="300" >The son of Mr. Anthony & Mrs. Celine </p>
-                                        <a class="ig_logo" target="_blank" href="https://www.instagram.com/randy_tjokro/" data-aos="fade-in" data-aos-delay="300" >
+                                        <h1 class="nama_pengantin_text_info py-3 aos-init" data-aos="fade-in" data-aos-delay="200" >Sansan Anshori</h1>
+                                        <p class="parent_information" data-aos="fade-in" data-aos-delay="300" >Putra Pertama Dari
+Bapak S. Zulkarnaen (Alm) & Ibu Yani Kuraeni</p>
+                                        <a class="ig_logo" target="_blank" href="https://www.instagram.com/sansanshhh_/" data-aos="fade-in" data-aos-delay="300" >
                                             <img src="./Image/ig-logo.png" alt="" style="width: 50px; height: auto;">
                                         </a>
                                     </article>
@@ -140,9 +141,10 @@
                                 <span class="bride_info">
                                     <article class="text-center">
                                         <img src="Image/RandyMega/bride_photo.png" alt="" width="150px" data-aos="fade-left" data-aos-delay="100" />
-                                        <h1 class="nama_pengantin_text_info py-3" data-aos="fade-in" data-aos-delay="200" >Mega Wijaya</h1>
-                                        <p class="parent_information" data-aos="fade-in" data-aos-delay="300" >The first daughter of Mr. Yukito & Mrs. Yati Kho</p>
-                                        <a class="ig_logo" target="_blank" href="https://www.instagram.com/megawijayalim/" data-aos="fade-in" data-aos-delay="300" >
+                                        <h1 class="nama_pengantin_text_info py-3" data-aos="fade-in" data-aos-delay="200" >Novita Hermawati</h1>
+                                        <p class="parent_information" data-aos="fade-in" data-aos-delay="300" >Putri Pertama Dari
+Bapak Agus Hermawan & Ibu Titin Saadah</p>
+                                        <a class="ig_logo" target="_blank" href="https://www.instagram.com/v.novitaa__/" data-aos="fade-in" data-aos-delay="300" >
                                             <img src="./Image/ig-logo.png" alt="" style="width:50px; height: auto;">
                                         </a>
                                     </article>
@@ -164,20 +166,20 @@
 
                         <div class="container pb-5 pt-3">
                             <div class="row mb-3 ">
-                                <h2 class="subJudulText" data-aos="fade-in" data-aos-delay="400">Holy Matrimony</h2>                                
+                                <h2 class="subJudulText" data-aos="fade-in" data-aos-delay="400">Akad</h2>                                
                             </div>
                             <div class="row mb-5 textKeterangan">
-                                <div data-aos="fade-in" data-aos-delay="200">Sunday, 12 February 2023</div>
+                                <div data-aos="fade-in" data-aos-delay="200">Minggu, 7 Juli 2024</div>
                                 <div data-aos="fade-in" data-aos-delay="300">09:00</div>
-                                <div data-aos="fade-in" data-aos-delay="400">Jalan Asia Afrika Senayan, Central Jakarta</div>
+                                <div data-aos="fade-in" data-aos-delay="400">Jl Lembur sawah, Cihampelas </div>
                             </div>
                             <div class="row mb-3 ">
-                                <h2 class="subJudulText" data-aos="fade-in" data-aos-delay="300">Wedding Reception</h2>
+                                <h2 class="subJudulText" data-aos="fade-in" data-aos-delay="300">Resepsi</h2>
                             </div>
                             <div class="row mb-5 textKeterangan">
-                                <div data-aos="fade-in" data-aos-delay="400">Sunday, 12 February 2023</div>
-                                <div data-aos="fade-in" data-aos-delay="500">19:00</div>
-                                <div data-aos="fade-in" data-aos-delay="600">Jalan Asia Afrika Senayan, Central Jakarta</div>
+                                <div data-aos="fade-in" data-aos-delay="400">Minggu, 7 July 2024</div>
+                                <div data-aos="fade-in" data-aos-delay="500">11:00</div>
+                                <div data-aos="fade-in" data-aos-delay="600">Jl Lembur sawah, Cihampelas</div>
                             </div>
                             <div class="row mb-2 ">
                                 <h4 class="textKeterangan" data-aos="fade-in" data-aos-delay="500">Request the honour of your presences at the virtual celebration as a witness of our wedding
