--- a/wedding/index.html
+++ b/wedding/index.html
@@ -115,7 +115,15 @@
                         </a>
                     </div>
                 
-                    <article class="quotes py-5" data-aos="fade-in" data-aos-delay="500" >"And over all these virtues put on love, which binds them all together in perfect unity."
+                    <article class="quotes py-5" data-aos="fade-in" data-aos-delay="500" >
+بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ
+
+“Dan diantara tanda-tanda kekuasaan-Nya ialah diciptakan Nya untukmu pasangan hidup dari jenismu sendiri supaya kamu mendapat ketenangan hati dan dijadikan-Nya kasih sayang diantara kamu. Sesungguhnya yang demikian menjadi tanda-tanda kebesaran-Nya bagi orang-orang yang berfikir.”
+
+ 
+
+(Ar-Rum: 21)
+
 
 </article>
                 
