--- a/wedding/index.html
+++ b/wedding/index.html
@@ -190,11 +190,8 @@ Bapak Agus Hermawan & Ibu Titin Saadah</p>
                                 <div data-aos="fade-in" data-aos-delay="600">Jl Lembur sawah, Cihampelas</div>
                             </div>
                             <div class="row mb-2 ">
-                                <h4 class="textKeterangan" data-aos="fade-in" data-aos-delay="500">Request the honour of your presences at the virtual celebration as a witness of our wedding
-                                blessing</h4>
+                                <h4 class="textKeterangan" data-aos="fade-in" data-aos-delay="500">isi apa ajaaaaaaaaaaaaaaaaag</h4>
                             </div>
-                            <div class="row m-auto link_youtube" data-aos="fade-in" data-aos-delay="300">
-                                <iframe max-width="300" height="500" src="https://www.youtube.com/embed/8K9JVndPTKc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>                              
                     </div>
