--- a/wedding/index.html
+++ b/wedding/index.html
@@ -186,7 +186,7 @@ Bapak Agus Hermawan & Ibu Titin Saadah</p>
                             </div>
                             <div class="row mb-5 textKeterangan">
                                 <div data-aos="fade-in" data-aos-delay="400">Minggu, 7 July 2024</div>
-                                <div data-aos="fade-in" data-aos-delay="500">11:00</div>
+                                <div data-aos="fade-in" data-aos-delay="500">11:00 - Selesai</div>
                                 <div data-aos="fade-in" data-aos-delay="600">Jl Lembur sawah, Cihampelas</div>
                             </div>
                             <div class="row mb-2 ">
