--- a/wedding/index.html
+++ b/wedding/index.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
-    <title>Sansan & Novita - Undangan Webr</title>
+    <title>Sansan & Novita - Undangan Web</title>
         
 </head><body class="container-fluid p-0"  data-bs-spy="scroll" data-bs-target="#scrollspy">
     <div class="popup_screen active">
