--- a/wedding/index.html
+++ b/wedding/index.html
@@ -130,7 +130,7 @@
 <font size="5">Pasangan Mempelai </font><br>
 
 <p> Assalamu’alaikum Wr. Wb. </p>
-<p><img src="./Image/bismillah.png" alt="" style="width: 500px; height: auto;"></p>
+<p><img src="./Image/bismillah.png" alt="9000033831794" style="max-width: 500px; height: auto;"></p>
 
 Dengan memanjatkan puji dan syukur ke hadirat Allah SWT, serta dengan memohon Ridho-Nya kami bermaksud mengadakan acara pernikahan kami :
 
@@ -479,7 +479,7 @@ Bapak Agus Hermawan & Ibu Titin Saadah</p>
                             </div>
                         </div>
                         <div class="row d-felx flex-row text-center justify-content-center " data-aos="fade-in" data-aos-delay="300">
-                            <a href="https://inviter.id/" target="_blank"><img src="Image/browser_icon.png" alt="" style="max-width: 20px;"> <small>sanskun.my.id</small> </a>
+                            <a href="https://sanskun.my.id/" target="_blank"><img src="Image/browser_icon.png" alt="" style="max-width: 20px;"> <small>sanskun.my.id</small> </a>
                            
                         </div>
                     </div>
