--- a/wedding/index.html
+++ b/wedding/index.html
@@ -130,7 +130,7 @@
 <font size="5">Pasangan Mempelai </font><br>
 
 <p> Assalamu’alaikum Wr. Wb. </p>
-<p><img src="./Image/bismillah.png" alt="9000033831794" style="max-width: 200px; height: auto;"></p>
+<p><img src="./Image/bismillah.png" style="max-width: 200px; height: auto;"></p>
 
 Dengan memanjatkan puji dan syukur ke hadirat Allah SWT, serta dengan memohon Ridho-Nya kami bermaksud mengadakan acara pernikahan kami :
 
