--- a/wedding/index.html
+++ b/wedding/index.html
@@ -78,7 +78,7 @@
         <!-- Music Media -->
         <div class="container">
             <audio loop id="mediaSong" display="hidden">
-                <source src="Music/alex-productions-romantic-music-for-weddings-and-valentines-day-love.mp3" type="audio/mp3">
+                <source src="./Music/wedding.mp3" type="audio/mp3">
             </audio>
             <input type="hidden" name="audioStatus" id="audioStatus" value="pause"> 
         </div>
