--- a/wedding/index.html
+++ b/wedding/index.html
@@ -96,12 +96,6 @@
                     </div>
                 </div>
                 <div class="container pb-0 w-75">
-                
-                    <div class="container justify-content-center mx-md-auto col-lg-12 p-3">
-                        <a class="google_link" target="_blank" href="https://calendar.google.com/calendar/u/1/r/eventedit/MWV0bWxnZmIwdDNrcG5uaWRxZnE2aGFnc2Qgc2Fuc2FuYW5zaG9yaTA1QG0" data-aos="fade-in" data-aos-delay="100" >
-                            <button class="btn btn-outline-dark">Add to your google Calendar</button>
-                        </a>
-                    </div>
         <!-- Music Media -->
         <div class="container">
             <audio loop id="mediaSong" display="hidden">
@@ -134,7 +128,7 @@
                                         <img src="Image/RandyMega/groom_photo.png" alt="" width="150px" data-aos="fade-right" data-aos-delay="100" />
                                         <h1 class="nama_pengantin_text_info py-3 aos-init" data-aos="fade-in" data-aos-delay="200" >Sansan Anshori</h1>
                                         <p class="parent_information" data-aos="fade-in" data-aos-delay="300" >Putra Pertama Dari
-Bapak S. Zulkarnaen (Alm) & Ibu Yani Kuraeni</p>
+Bapak Zulkarnaen (Alm) & Ibu Yani Kuraeni</p>
                                         <a class="ig_logo" target="_blank" href="https://www.instagram.com/sansanshhh_/" data-aos="fade-in" data-aos-delay="300" >
                                             <img src="./Image/ig-logo.png" alt="" style="width: 50px; height: auto;">
                                         </a>
@@ -150,7 +144,7 @@ Bapak S. Zulkarnaen (Alm) & Ibu Yani Kuraeni</p>
                                         <img src="Image/RandyMega/bride_photo.png" alt="" width="150px" data-aos="fade-left" data-aos-delay="100" />
                                         <h1 class="nama_pengantin_text_info py-3" data-aos="fade-in" data-aos-delay="200" >Novita Hermawati</h1>
                                         <p class="parent_information" data-aos="fade-in" data-aos-delay="300" >Putri Pertama Dari
-Bapak Agus Hermawan & Ibu Titin Saadah</p>
+Bapak Agus Hermawan & Ibu Titin Sa'adah</p>
                                         <a class="ig_logo" target="_blank" href="https://www.instagram.com/v.novitaa__/" data-aos="fade-in" data-aos-delay="300" >
                                             <img src="./Image/ig-logo.png" alt="" style="width:50px; height: auto;">
                                         </a>
@@ -177,7 +171,7 @@ Bapak Agus Hermawan & Ibu Titin Saadah</p>
                             </div>
                             <div class="row mb-5 textKeterangan">
                                 <div data-aos="fade-in" data-aos-delay="200">Minggu, 7 Juli 2024</div>
-                                <div data-aos="fade-in" data-aos-delay="300">09:00</div>
+                                <div data-aos="fade-in" data-aos-delay="300">09:00 - Selesai</div>
                                 <div data-aos="fade-in" data-aos-delay="400">Kp Lembur sawah, RT 01/Rw 11 Ds.Cihampelas Kec.Cihampelas Kab.Bandung Barat 40676 </div>
                             </div>
                             <div class="row mb-3 ">
@@ -185,7 +179,7 @@ Bapak Agus Hermawan & Ibu Titin Saadah</p>
                             </div>
                             <div class="row mb-5 textKeterangan">
                                 <div data-aos="fade-in" data-aos-delay="400">Minggu, 7 July 2024</div>
-                                <div data-aos="fade-in" data-aos-delay="500">10:00 - Selesai</div>
+                                <div data-aos="fade-in" data-aos-delay="500">11:00 - Selesai</div>
                                 <div data-aos="fade-in" data-aos-delay="600">Kp Lembur sawah, RT 01/Rw 11 Ds.Cihampelas Kec.Cihampelas Kab.Bandung Barat 40676</div>
                             </div>
                             <div class="row mb-2 ">
