--- a/wedding/index.html
+++ b/wedding/index.html
@@ -293,7 +293,7 @@ Bapak Agus Hermawan & Ibu Titin Sa'adah</p>
                                 <img src="./Image/QR_codeBCA_user.jpg" alt="9000033831794" style="max-width: 200px;">
                             </div>
                             <div class="bank_image py-2 ">
-                                <img src="Image/BCA_logo_Bank_Central_Asia.png" alt="9000033831794" style="max-width: 100px;">
+                                <img src="Image/logo-mandiri.png" alt="9000033831794" style="max-width: 100px;">
                             </div>
             
                         </div>
@@ -309,7 +309,7 @@ Bapak Agus Hermawan & Ibu Titin Sa'adah</p>
                                 <img src="./Image/QR_codeBCA_user.jpg" alt="9000033831794" style="max-width: 200px;">
                             </div>
                             <div class="bank_image py-2 ">
-                                <img src="Image/BCA_logo_Bank_Central_Asia.png" alt="9000033831794" style="max-width: 100px;">
+                                <img src="Image/logo-bca.png" alt="9000033831794" style="max-width: 100px;">
                             </div>
             
                         </div>
